misc single deployments/pubip.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-egress
spec:
  loadBalancerIP: 40.76.82.234
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 56789
    targetPort: 56789
